force-app/main/default/objects/Milestone__c/Milestone__c.object-meta.xml
<CustomObject>
    <description>Project Milestones</description>
    <label>Milestone</label>
    <nameField>
        <displayFormat>MI-{000}</displayFormat>
        <label>Milestone ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>