force-app/main/default/objects/Milestone__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>