force-app/main/default/objects/Milestone__c/fields/Current_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Due_Date__c</fullName>
    <label>Current Due Date</label>
    <type>Date</type>
</CustomField>