force-app/main/default/objects/Milestone__c/fields/Estimated_Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Percent_Complete__c</fullName>
    <label>Estimated Percent Complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>