force-app/main/default/objects/Milestone__c/fields/Project_Category__c.field-meta.xml
<CustomField>
    <fullName>Project_Category__c</fullName>
    <label>Project Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project Mgmt</fullName>
            </value>
            <value>
                <fullName>Requirements Definition</fullName>
            </value>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>Configuration</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Data Migration</fullName>
            </value>
            <value>
                <fullName>System Integration</fullName>
            </value>
            <value>
                <fullName>Quality Assurance</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>