force-app/main/default/objects/Milestone__c/fields/Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Responsibility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsibility</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Milestones</relationshipName>
    <type>Lookup</type>
</CustomField>